Add modern UI theme & components
Introduce a modern themed UI and refactor board/sidebars. Adds new components: ModernBoardContainer, ModernClockPanel, ModernHeaderBar, ModernHistoryAndControlsPanel, ModernIcons, ModernLeftSidebar, ModernTakenPiecesPanel, ModernTheme, ModernToggleSwitch. Refactors BoardPanel (public, coordinate rendering moved to ModernBoardContainer, visuals/arrow sizing/tile hit API tweaked), updates BoardTheme defaults and values, and adds GameSetup setters. Table is refactored to use the modern components, persists theme mode, exposes new preferences (showCoordinates, highlightLegalMoves, highlightLastMove), updates animation/timer handling, and integrates sound/status updates. Various UI/layout, color, and behavior improvements for a modern look and interaction model.